--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       }
 
       .hero-bg {
-        background-image: url("JMPortfolio2026/resources/hero-bg.png");
+        background-image: url("resources/hero-bg.png");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
