--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <section
       id="home"
       class="relative min-h-screen flex items-center justify-center hero-bg"
-      style="background-image: url(&quot;./resources/hero-bg.png?v=2&quot;)"
+      style="background-image: url(&quot;resources/hero-bg.png?v=2&quot;)"
     >
       <div class="absolute inset-0 bg-black bg-opacity-70"></div>
       <div class="relative z-10 text-center px-4 max-w-4xl mx-auto">
