--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       }
 
       .hero-bg {
-        background-image: url("/JMPortfolio2026/resources/hero-bg.png");
+        background-image: url("resources/hero-bg.png");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -250,7 +250,7 @@
     <section
       id="home"
       class="relative min-h-screen flex items-center justify-center hero-bg"
-      style="background-image: url('/JMPortfolio2026/resources/hero-bg.png')"
+      style="background-image: url('resources/hero-bg.png')"
     >
       <div class="absolute inset-0 bg-black bg-opacity-70"></div>
       <div class="relative z-10 text-center px-4 max-w-4xl mx-auto">
