--- a/index.html
+++ b/index.html
@@ -435,6 +435,6 @@
     </footer>
 
     <script src="main.js"></script>
-    <script src="/JMPortfolio2026/golden-dust.js"></script>
+    <script src="/golden-dust.js"></script>
   </body>
 </html>
