--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <!-- Hero Section -->
     <section
       id="home"
-      class="relative min-h-screen flex items-center justify-center hero-bg"
+      class="relative min-h-screen max-w-full flex items-center justify-center hero-bg"
       style="background-image: url('resources/hero-bg.png')"
     >
       <div class="absolute inset-0 bg-black bg-opacity-70"></div>
